--- a/travel_form/src/index.css
+++ b/travel_form/src/index.css
@@ -8,6 +8,9 @@ body {
   -moz-osx-font-smoothing: grayscale;
   min-height: 100vh;
   --Purple: #462c89;
+  --White: #FFF;
+  --Beige: #EEE;
+  --Black: #000;
 }
 
 code {
@@ -22,31 +25,50 @@ code {
     background-color: var(--Purple);
   }
 
+  .contentContainer {
+    padding: 1% 2%;
+    border: 2px solid var(--Purple);
+    z-index: 1;
+  }
+
+  .contentContainer > a {
+    text-decoration: none;
+    font-style: italic;
+    color: var(--Black);
+    text-shadow: 0 -1px var(--Purple);
+    background-color: var(--Beige);
+  }
+  
+  .contentContainer > a:hover {
+    color: var(--Beige);
+    text-shadow: 0 -1px var(--Purple);
+    background-color: var(--Black);
+  }
+
   #dropdown #navigation {
     display: none;
     background-color: var(--Purple);
-    z-index: 990;
   }
 
   #dropdown:hover #navigation {
     display: grid;
-    padding: 2%;
-    padding-left: 15%;
+    margin: 0 -4%;
     justify-content: center;
     grid-template-columns: repeat(2, 45%);
+    z-index: 998;
   }
 
   #dropdown:hover #navigation > a {
     background-color: var(--Purple);
-    font-size: 1.5em;
-    color: #FFF;
+    font-size: 1.2em;
+    padding-left: 22%;
+    color: var(--White);
     text-decoration: none;
     z-index: 999;
   }
-
   #dropdown:hover #navigation > a:hover {
     color: var(--Purple);
-    background-color: #FFF;
+    background-color: var(--White);
   }
 
   header > h1 {
@@ -54,7 +76,7 @@ code {
     font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
     text-align: center;
     padding-top: 5%;
-    background: -webkit-linear-gradient(90deg, #555 5%, #EEE 40%);
+    background: -webkit-linear-gradient(90deg, #555 5%, var(--Beige) 40%);
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
   }
@@ -62,12 +84,12 @@ code {
   header > p {
     padding: 1%;
     font-size: 0.9em;
-    color: #EEE;
+    color: var(--Beige);
     text-align: center;
   }
 
   .menu-icons {
-    color: #FFF;
+    color: var(--White);
     font-size: 2em;
     padding-left: 20%;
   }
@@ -88,7 +110,7 @@ code {
     margin: 5%;
     padding: 1% 0 1% 0;
     letter-spacing: 5px;
-    color: #EEE;
+    color: var(--Beige);
   }
 
   .inputForm {
@@ -125,7 +147,7 @@ code {
   }
 
   .travelButtons:checked {
-    background-color: #FFF;
+    background-color: var(--White);
     border: 7px solid var(--Purple);
   }
 
@@ -140,26 +162,49 @@ code {
     zoom: 2;
   }
 
-  .activeSuggestion {
+  .autoComplete > ul {
+    margin-left: -21%;
+    margin-right: 10%;
     list-style: none;
-    background-color: #000;
-    color: #FFF;
+  }
+
+  .activeSuggestion {
+    background-color: var(--Black);
+    color: var(--White);
+  }
+
+  #journeyInformation {
+    font-size: 1.5em;
+    margin: auto 2%;
+  }
+
+  #send {
+    margin: 5% 10%;
+    padding: 0;
+    width: 80%;
+    height: 100px;
+    text-align: center;
+    font-size: 2em;
+    color: var(--White);
+    background-color: var(--Purple);
+    border: none;
+    box-shadow: -5px 5px #555;
   }
 
   footer {
     position: static;
     bottom: 0;
-    padding: 0 5%;
+    padding: 0 3%;
     height: 10vh;
     background-color: var(--Purple);
-    color: #EEE;
+    color: var(--Beige);
   }
 }
 
 /* Tablet */
-@media screen and (max-width: 769px) {
+@media screen and (min-width: 427px) {
   header {
-    height: 24vh;
+    height: 40vh;
     background-color: var(--Purple);
     font-size: 1.8em;
   }
@@ -172,36 +217,36 @@ code {
   #dropdown #navigation {
     display: none;
     background-color: var(--Purple);
-    z-index: 990;
   }
 
   #dropdown:hover #navigation {
     display: grid;
     padding: 2%;
-    padding-left: 15%;
+    padding-left: 22%;
     justify-content: center;
     grid-template-columns: repeat(2, 45%);
+    z-index: 998;
   }
 
   #dropdown:hover #navigation > a {
     background-color: var(--Purple);
-    font-size: 1.5em;
-    color: #FFF;
+    font-size: 1.2em;
+    color: var(--White);
     text-decoration: none;
     z-index: 999;
   }
 
   #dropdown:hover #navigation > a:hover {
     color: var(--Purple);
-    background-color: #FFF;
+    background-color: var(--White);
   }
 
   header > h1 {
     margin-top: 0;
     font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
     text-align: center;
-    padding-top: 5%;
-    background: -webkit-linear-gradient(90deg, #555 5%, #EEE 40%);
+    padding-top: 1%;
+    background: -webkit-linear-gradient(90deg, #555 5%, var(--Beige) 40%);
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
   }
@@ -209,12 +254,12 @@ code {
   header > p {
     padding: 1%;
     font-size: 0.9em;
-    color: #EEE;
+    color: var(--Beige);
     text-align: center;
   }
 
   .menu-icons {
-    color: #FFF;
+    color: var(--White);
     font-size: 2em;
     padding-left: 20%;
   }
@@ -236,7 +281,7 @@ code {
     margin: 5%;
     padding: 1% 0 1% 0;
     letter-spacing: 5px;
-    color: #EEE;
+    color: var(--Beige);
   }
 
   .inputForm {
@@ -276,7 +321,7 @@ code {
   }
 
   .travelButtons:checked {
-    background-color: #FFF;
+    background-color: var(--White);
     border: 9px solid var(--Purple);
   }
 
@@ -291,10 +336,15 @@ code {
     zoom: 3;
   }
 
-  .activeSuggestion {
+  .autoComplete > ul {
     list-style: none;
-    background-color: #000;
-    color: #FFF;
+    margin-left: -18%;
+    margin-right: 25%;
+  }
+
+  .activeSuggestion {
+    background-color: var(--Black);
+    color: var(--White);
   }
 
   #journeyInformation {
@@ -302,13 +352,244 @@ code {
     margin-left: 15%;
   }
 
+  #send {
+    margin: 5% 10%;
+    padding: 0;
+    width: 80%;
+    height: 100px;
+    text-align: center;
+    font-size: 2em;
+    color: var(--White);
+    background-color: var(--Purple);
+    border: none;
+    box-shadow: -5px 5px #555;
+  }
+
   footer {
     position: static;
     bottom: 0;
+    padding: 1% 5% 1% 5%;
+    font-size: 1.5em;
+    height: 10vh;
+    background-color: var(--Purple);
+    color: var(--Beige);
+  }
+}
+
+/* Desktop */
+@media screen and (min-width: 770px) {
+  body {
+    background: linear-gradient(to right, var(--Purple) -50%, var(--White) 50%, var(--Purple) 150%);
+  }
+
+  header {
+    height: 30vh;
+    background-color: var(--Purple);
+    font-size: 1.8em;
+  }
+
+  .contentContainer {
+    min-height: 60vh;
+    width: 70%;
+    margin: 0 auto;
+    padding: 0 2%;
+    border: 2px solid var(--Purple);
+  }
+
+  #dropdown #navigation {
+    display: none;
+    background-color: var(--Purple);
+  }
+
+  #dropdown:hover #navigation {
+    display: grid;
+    padding: 2%;
+    padding-left: 26%;
+    justify-content: center;
+    grid-template-columns: repeat(2, 45%);
+    z-index: 998;
+  }
+
+  #dropdown:hover #navigation > a {
+    background-color: var(--Purple);
+    font-size: 1.2em;
+    color: var(--White);
+    text-decoration: none;
+    z-index: 999;
+  }
+
+  #dropdown:hover #navigation > a:hover {
+    color: var(--Purple);
+    background-color: var(--White);
+  }
+
+  header > h1 {
+    margin-top: 0;
+    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+    text-align: center;
+    padding-top: 5%;
+    background: -webkit-linear-gradient(90deg, #555 5%, var(--Beige) 40%);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+  }
+
+  header > p {
+    padding: 1%;
+    font-size: 0.9em;
+    color: var(--Beige);
+    text-align: center;
+  }
+
+  .menu-icons {
+    color: var(--White);
+    font-size: 2em;
+    padding-left: 23%;
+  }
+
+  #container {
+    margin: 0 auto;
+    background-color: var(--White);
+    width: 60%;
+    box-shadow: -20px 0 #888, 20px 0 #888;
+    display: grid;
+    justify-content: center;
+    grid-template-columns: repeat(8, 12.5%);
+    grid-template-rows: repeat(22, 5%);
+    z-index: 1;
+  }
+
+  #calendars {
+    grid-column: 3 / span 4;
+    grid-row: 7 / span 10;
+    zoom: 1.5;
+    z-index: 1;
+  }
+
+  .formPosition {
+    grid-column: 1 / span 7;
+    grid-row: 1 / span 6;
+    z-index: 20;
+  }
+
+  /* The airport svg picture */
+  #f3dab87e-8e17-45b3-a71d-8ebfb46e2440 {
+    margin-left: 5%;
+  }
+
+  form > button {
+    background-color: var(--Purple);
+    border: none;
+    font-size: 2.5em;
+    width: 90%;
+    padding: 1% 0 1% 0;
+    letter-spacing: 5px;
+    color: var(--Beige);
+  }
+
+  .inputForm {
+    font-size: 2em;
+    margin-left: 30%;
+  }
+
+  .inputForm > input {
+    margin-right: 10%;
+    margin-left: 3%;
+  }
+
+  #dateToReturn, #dateToLeave {
+    text-align: center;
+    margin-bottom: 1%;
+  }
+
+  #travellingPeople {
+    font-size: 2em;
+    grid-column: 2 / span 6;
+    grid-row: 17;
+  }
+
+  #travellingPeople > select {
+    zoom: 3;
+    margin-left: 7%
+  }
+
+  .travelButtons {
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
+    height: 3em;
+    width: 3em;
+    border-radius: 50%;
+    background-color: var(--Purple);
+  }
+
+  .travelButtons:checked {
+    background-color: var(--White);
+    border: 9px solid var(--Purple);
+  }
+
+  .travelLabels {
+    font-size: 2em;
+    margin-left: 25%;
+  }
+
+  .autoComplete {
+    margin-left: 25%;
+    zoom: 3;
+  }
+
+  .autoComplete > ul {
+    margin-top: 2px;
+    margin-right: 10%;
+    padding: 0 5%;
+    list-style: none;
+    background-color: var(--White);
+    border: 2px double var(--Black);
+  }
+
+  /* No search matches */
+  .autoComplete > div {
+    margin-top: 2px;
+    margin-right: 10%;
+    padding: 0 5%;
+    list-style: none;
+    background-color: var(--White);
+    border: 2px double var(--Black);
+  }
+
+  .activeSuggestion {
+    margin-right: 12%;
+    background-color: var(--Black);
+    color: var(--White);
+  }
+
+  #journeyInformation {
+    font-size: 2em;
+    grid-column: 2 / span 6;
+    grid-row: 18;
+  }
+
+  #send {
+    grid-column: 3 / span 4;
+    grid-row: 21 / span 2;
+    margin: 10% auto;
+    padding: 0;
+    width: 100%;
+    height: 100px;
+    text-align: center;
+    font-size: 2em;
+    color: var(--White);
+    background-color: var(--Purple);
+    border: none;
+    box-shadow: -5px 5px #555;
+  }
+
+  footer {
+    position: static;
+    top: 90vh;
     padding: 1% 5% 0 5%;
     font-size: 2em;
     height: 10vh;
     background-color: var(--Purple);
-    color: #EEE;
+    color: var(--Beige);
   }
 }
